--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=LGLENETT;Initial Catalog=LaptopDirect-App-Db;Integrated Security=True;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
